feat: update site header top bar - add menu toggle button - add javascript to handle open/close of menu - update styles for small screens based on aria attributes

--- a/src/index.html
+++ b/src/index.html
@@ -14,5 +14,7 @@
       <include src="./assets/partials/site-header-top-bar.html"></include>
       <include src="./assets/partials/site-header-main.html"></include>
     </header>
+
+    <script src="./assets/js/index.js"></script>
   </body>
 </html>
