--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>OSU</title>
-	<meta name="description" content="">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>OSU</title>
+    <meta name="description" content="" />
 
-    <link rel="stylesheet" href="./assets/scss/style.scss">
-</head>
-<body>
-	
-</body>
+    <link rel="stylesheet" href="./assets/scss/style.scss" />
+  </head>
+  <body>
+    <header class="site-header">
+      <include src="./assets/partials/site-header-top-bar.html"></include>
+      <include src="./assets/partials/site-header-main.html"></include>
+    </header>
+
+    <script src="./assets/js/index.js"></script>
+  </body>
 </html>
