--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,14 @@
       <include src="./assets/partials/site-header-main.html"></include>
     </header>
 
+    <footer class="site-footer">
+      <div class="obj-container">
+        <include src="./assets/partials/site-footer-subscribe.html"></include>
+        <include src="./assets/partials/site-footer-main.html"></include>
+        <include src="./assets/partials/site-footer-bottom.html"></include>
+      </div>
+    </footer>
+
     <script src="./assets/js/index.js"></script>
   </body>
 </html>
