feat: add compoment and include in index - add main element to page

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,14 @@
       <include src="./assets/partials/site-header-main.html"></include>
     </header>
 
+    <main id="content" class="site-content">
+      <section class="obj-section">
+        <include
+          src="./assets/partials/component-wysiwyg-content.html"
+        ></include>
+      </section>
+    </main>
+
     <footer class="site-footer">
       <div class="obj-container">
         <include src="./assets/partials/site-footer-subscribe.html"></include>
