feat: add content-w-media component to index

--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,13 @@
 
     <main id="content" class="site-content">
       <section class="obj-section">
-        <include
-          src="./assets/partials/component-wysiwyg-content.html"
-        ></include>
+        <!-- prettier-ignore -->
+        <include src="./assets/partials/component-wysiwyg-content.html"></include>
+      </section>
+
+      <section class="obj-section">
+        <!-- prettier-ignore -->
+        <include src="./assets/partials/component-content-w-media.html"></include>
       </section>
     </main>
 
