feat: add AOS data attributes to elements to animate

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./assets/scss/style.scss" />
   </head>
   <body>
-    <header class="site-header">
+    <header class="site-header" data-aos="fade-up">
       <include src="./assets/partials/site-header-top-bar.html"></include>
       <include src="./assets/partials/site-header-main.html"></include>
     </header>
@@ -27,7 +27,7 @@
       </section>
     </main>
 
-    <footer class="site-footer">
+    <footer class="site-footer" data-aos="fade-up">
       <div class="obj-container">
         <include src="./assets/partials/site-footer-subscribe.html"></include>
         <include src="./assets/partials/site-footer-main.html"></include>
