feat: add stats component - include file in index - style component

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,10 @@
         <!-- prettier-ignore -->
         <include src="./assets/partials/component-content-w-media.html"></include>
       </section>
+
+      <section class="obj-section">
+        <include src="./assets/partials/component-stats.html"></include>
+      </section>
     </main>
 
     <footer class="site-footer" data-aos="fade-up">
