feat: add news component - add markup to partial file and include in index - add styles for component

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,10 @@
       <section class="obj-section">
         <include src="./assets/partials/component-stats.html"></include>
       </section>
+
+      <section class="obj-section">
+        <include src="./assets/partials/component-news.html"></include>
+      </section>
     </main>
 
     <footer class="site-footer" data-aos="fade-up">
