feat: add page hero - add component styles for page links - add component styles for event list - add page hero component to index and style

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,10 @@
 
     <main id="content" class="site-content">
       <section class="obj-section">
+        <include src="./assets/partials/component-page-hero.html"></include>
+      </section>
+
+      <section class="obj-section">
         <!-- prettier-ignore -->
         <include src="./assets/partials/component-wysiwyg-content.html"></include>
       </section>
