--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <body>
     <a href="#content" class="skip-link button">Skip to Content</a>
 
-    <header class="site-header" data-aos="fade-up">
+    <header class="site-header">
       <include src="./assets/partials/site-header-top-bar.html"></include>
       <include src="./assets/partials/site-header-main.html"></include>
     </header>
